# llama-model-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MANIFEST.in  MODELS.md  NOTICE  README.md  install-bootstrap.sh  install.sh  pyproject.toml  session-ses_1f5e-bugs.md  session-ses_2202-LMM.md
.omx/: metrics.json
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
config/: HELP.txt  default.yaml  defaults.env.example  models.tsv.example
desktop/: llama-model-manager.desktop
docs/: AI_REVIEW_FALSE_POSITIVES.md  CLAUDE_CODE_LOCAL_GATEWAY.md  CONTEXT_MODE_MCP.md  FORENSICS_WEB_APP_CONTEXT_BUDGET_2026-05-14.md  GATEWAY_TIMEOUT_FIX.md  GITHUB-LAUNCH.md  GITHUB-PUBLISHING.md  GPU_OFFLOAD_FIX.md  LICENSE  NOTICE  OH_MY_OPENAGENT_LOCAL_PATCHES.md  OH_MY_OPENAGENT_PROVIDER_NAME_FIX.md  OPENCLAW_LOCAL_PROVIDER.md  OPENCODE_LOCAL_PROVIDER.md  ORION-INTEGRATION.md  RELEASE-NOTES-v2.md  ROADMAP.md  TERRAN-GLYPHOS-LONG-RUN-VALIDATION.md  UPDATE-WATCHER-PLAN.md  lmm-fresh-install-runbook.md  lmm-opencode-ohmyopenagent-implementation-architecture-and-agent-runbook-2026-05-06.md  opencode-glyphos-fast-lane.md  upstream-3883-comment.md
scripts/: build-llama-server.sh  claude_gateway.py  context_mcp_bridge.py  gateway_server.py  glyphos_openai_gateway.py  integration_sync.py  lmm_config.py  lmm_errors.py  lmm_handoff.py  lmm_health.py  lmm_integrations.py  lmm_notifications.py  lmm_providers.py  lmm_receipts.py  lmm_storage.py  lmm_types.py  lmm_updates.py  render-glyphos-clip.py  render_public_assets.py  smoke_installed_wheel.sh
tasks/: bash bugs opencode and claude.md  doctor-cuda-validation-bug.md  lessons.md  oh-my-openagent-3883-task-defaults.md  oh-my-openagent-crash-containment-plan.md  todo.md
tests/: test_claude_gateway.py  test_cli_smoke.py  test_cloud_glyph_injection.py  test_cloud_glyph_roundtrip.py  test_gateway_context_provider.py  test_gateway_sse.py  test_glyph_codec.py  test_glyph_registry.py  test_integrity_guards.py  test_operator_lane_config.py  test_phase0_contracts.py  test_portability.sh  test_q2_flow.py
web/: app.js  app.py  (+3 more)
(+195 files in other folders)
